tests/paczka1/fuzzy1/53226137.err
Error in line 6: 7GLwF7W S303 87,2
Error in line 10: 7GLwF7WA94985,3
Error in line 12: 2NYEt34j2Wk A534 66,4
Error in line 27: 2NYEt34j2Wk S303 48,7
Error in line 9: 7GLwF7W A949 65,1
Error in line 37: A5EX8 S303 68,7
